[project]
name = "withdrawal-remedy-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.2"
dependencies = [
    "networkx>=3.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=17.0.0",
    "streamlit>=1.39.0",
]
